<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="com.example.android.storeinventory.EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/photo_detail_image"
                style="@style/PhotoStyle"
                android:src="@drawable/no_image_available" />

        </LinearLayout>

        <LinearLayout
            style="@style/DetailLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:paddingTop="@dimen/padding_16dp">

            <TextView
                style="@style/CategoryDetailStyle"
                android:text="@string/product_name" />

            <TextView
                android:id="@+id/product_name_detail_text"
                style="@style/EditFieldStyle.TextStyle"
                tools:text="@string/name" />

        </LinearLayout>

        <LinearLayout
            style="@style/DetailLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_height"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryDetailStyle"
                android:text="@string/weight" />

            <TextView
                android:id="@+id/weight_detail_text"
                style="@style/EditFieldStyle.TextStyle"
                tools:text="@string/weight" />

        </LinearLayout>

        <LinearLayout
            style="@style/DetailLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_height"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryDetailStyle"
                android:text="@string/price" />

            <TextView
                android:id="@+id/price_detail_text"
                style="@style/EditFieldStyle.TextStyle"
                tools:text="@string/price" />

        </LinearLayout>

        <View
            style="@style/DividerStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/horizontal_divider_height" />

        <LinearLayout
            style="@style/DetailLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryDetailStyle"
                android:text="@string/quantity" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <Button
                    android:id="@+id/decrease_button"
                    style="@style/QuantityButtonStyle"
                    android:text="@string/minus" />

                <TextView
                    android:id="@+id/quantity_detail_text"
                    style="@style/EditFieldStyle"
                    android:layout_width="100dp"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    tools:text="10000" />

                <Button
                    android:id="@+id/increase_button"
                    style="@style/QuantityButtonStyle"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/plus" />

            </RelativeLayout>
        </LinearLayout>

        <View
            style="@style/DividerStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/horizontal_divider_height" />

        <LinearLayout
            style="@style/DetailLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/detail_height"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryDetailStyle"
                android:text="@string/supplier_name" />

            <TextView
                android:id="@+id/supplier_name_detail_text"
                style="@style/EditFieldStyle.TextStyle"
                tools:text="@string/supplier" />

        </LinearLayout>

        <LinearLayout
            style="@style/DetailLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryDetailStyle"
                android:text="@string/supplier_email" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/supplier_email_detail_text"
                    style="@style/EditFieldStyle"
                    android:layout_width="180dp"
                    android:layout_centerVertical="true"
                    tools:text="@string/email" />

                <ImageButton
                    android:id="@+id/email_image"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_email" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/DetailLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryDetailStyle"
                android:text="@string/supplier_phone" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/supplier_phone_detail_text"
                    style="@style/EditFieldStyle"
                    android:layout_width="180dp"
                    android:layout_centerVertical="true"
                    tools:text="@string/phone" />

                <ImageButton
                    android:id="@+id/phone_image"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="@dimen/button_size"
                    android:layout_height="@dimen/button_size"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_phone" />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>