<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="com.example.android.storeinventory.EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding_16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/photo_image"
                style="@style/PhotoStyle"
                android:src="@drawable/no_image_available" />

            <LinearLayout
                android:layout_width="@dimen/image_picker_box"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/layout_margin_16dp"
                android:background="@drawable/shape"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/take_photo_image"
                    android:layout_width="@dimen/zero_width"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_photo_camera" />

                <View
                    android:layout_width="@dimen/vertical_divider_width"
                    android:layout_height="match_parent"
                    android:background="@android:color/white" />

                <ImageView
                    android:id="@+id/gallery_image"
                    android:layout_width="@dimen/zero_width"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_photo_library" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/CategoryLayoutStyle"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/product_name" />

            <EditText
                android:id="@+id/product_name_edit"
                style="@style/EditFieldStyle"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:hint="@string/name"
                android:inputType="textCapWords" />

        </LinearLayout>

        <LinearLayout
            style="@style/CategoryLayoutStyle"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/weight" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <EditText
                    android:id="@+id/weight_edit"
                    style="@style/EditFieldStyle"
                    android:layout_width="match_parent"
                    android:hint="@string/weight"
                    android:inputType="numberDecimal" />

                <TextView
                    style="@style/EditFieldUnitStyle"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/kg_unit" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            style="@style/CategoryLayoutStyle"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/price" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/rm" />

                <EditText
                    android:id="@+id/price_edit"
                    style="@style/EditFieldStyle"
                    android:layout_width="match_parent"
                    android:hint="@string/price"
                    android:inputType="numberDecimal" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            style="@style/CategoryLayoutStyle"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/quantity" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <EditText
                    android:id="@+id/quantity_edit"
                    style="@style/EditFieldStyle"
                    android:layout_width="match_parent"
                    android:hint="@string/quantity"
                    android:inputType="number" />

                <TextView
                    style="@style/EditFieldUnitStyle"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/unit" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            style="@style/CategoryLayoutStyle"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/supplier" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/supplier_name_edit"
                    style="@style/EditFieldStyle"
                    android:layout_width="match_parent"
                    android:hint="@string/supplier"
                    android:inputType="textCapWords" />

                <EditText
                    android:id="@+id/supplier_email_edit"
                    style="@style/EditFieldStyle"
                    android:layout_width="match_parent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

                <EditText
                    android:id="@+id/supplier_phone_edit"
                    style="@style/EditFieldStyle"
                    android:layout_width="match_parent"
                    android:hint="@string/phone"
                    android:inputType="phone" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>